2006-06-26  Alan Coopersmith  <alan.coopersmith@sun.com>

	* access.c:
	* chooser.c:
	* xdmcp.c: 
	Bugzilla #7332 <https://bugs.freedesktop.org/show_bug.cgi?id=7332>
	Patch #6046 <https://bugs.freedesktop.org/attachment.cgi?id=6046>
	(1) Xdm compiled with IPv6 support failed to accept any
	chooser connections (even when only using IPv4).
	(2) There should be a one-to-one correspondence between
	successful getaddrinfo calls and freeaddrinfo calls.
	(Peter Breitenlohner)

2006-06-20  Matthieu Herrb <matthieu.herrb@laas.fr>
	* session.c:
	* xdmshell.c:
	Check setuid() return value. Bugzilla #7116.

2006-06-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* xdmcp.c (request_respond): 
	Initialize manufacturerDisplayID.length to 0 too.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	* greeter/greet.c:
	* greeter/verify.c: 
	Mark GreetUser (called from xdm) as _X_EXPORT.
	Make all other non-static functions in libXdmGreet _X_INTERNAL.
	
2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* configure.ac:
	* dm.h: 
	Replace old Imake-based SIGNALRETURNSINT with AC_TYPE_SIGNAL

	* configure.ac:
	* util.c
	Replace old Imake #ifdefs with AC_CHECK_FUNCS([sigaction])
	
2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* AUTHORS:
	Make initial pass at an AUTHORS list.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c:
	* greeter/Login.c:
	* greeter/Login.h:
	* greeter/LoginP.h:
	* greeter/greet.c:
	* greeter/verify.c:
	Convert PAM code to use full PAM conversation.   Modify greeter to
	allow PAM to prompt for more than just username and password.
	Rely on PAM to initialize Secure RPC & Kerberos credentials when it
	is being used.   (Based on work begun for Sun bug #6398796 
	"Solaris-10: Unable to login thru xdm once password is aged")

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>	

	* dm.c (WaitForChild): 
	* server.c (serverPause): 